# toast-thebrowser

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.sh  justfile  test.sh
crates/toast/: Cargo.toml
crates/toast-browser/: Cargo.toml
crates/toast-browser/src/: browser.rs  lib.rs  screenshot.rs
crates/toast-core/: Cargo.toml
crates/toast-core/src/: types.rs
crates/toast-render/: Cargo.toml
crates/toast-render/src/: decoder.rs  halfblock.rs  lib.rs  quantizer.rs  scaler.rs
crates/toast-terminal/: Cargo.toml
crates/toast-terminal/src/: dimensions.rs  lib.rs  renderer.rs  terminal.rs
crates/toast/src/: app.rs  main.rs
examples/: static_render.rs  test_colors.rs
