[package]
name = "toast-browser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
toast-core = { workspace = true }
chromiumoxide = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
